themes/skins/niecalumni.css
/* ... */
.radio:checked + .relative .circle {
  background: #f98262;
}
.radio:checked ~ .content {
  max-height: 180px;
  border-color: #eee9dc;
  width: 400px;
}
.radio:checked ~ .content p {
  max-height: 200px;
  color: #eee9dc;
  transition: color 0.3s linear 0.3s;
}

.tooltip:hover:after{
	background: #333;
	background: #8cc253;
	-moz-box-shadow: inset 0 1px 1px rgba(255,255,255,.25),0 1px 2px rgba(0,0,0,.25);
	-webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,.25),0 1px 2px rgba(0,0,0,.25);
	box-shadow: inset 0 1px 1px rgba(255,255,255,.25),0 1px 2px rgba(0,0,0,.25);
	border-radius: 5px;
	bottom: 26px;
	color: #fff;
	content: attr(title);
	left: 20%;
	padding: 5px 15px;
	position: absolute;
	z-index: 98;
	width: 180px;
	top: -50px;
	bottom: 45px;
	}
	
	.tooltip:hover:before{
	border: solid;
	border-color: #8cc253 transparent;
	border-width: 6px 6px 0px 6px;
	bottom: 40px;
	content: "";
	left: 50%;
	position: absolute;
        z-index: 99; }


.searchdir{ 
    display: none;
margin: 0 20%;
    border-bottom-right-radius: 4px;
border-bottom-left-radius: 4px; 
    padding: 10px;
    position: relative;
top: -4px;
    background: white;
}

.dirfield {
   display: inline-block;
    
}

.Slidedown{
background:#3AC162 url(/themes/skins/images/down.png) center center no-repeat;
width: 24px;
height: 24px;
    position: relative;
top: -9px;
    text-align: center;
margin: 0 72%; 
border-bottom-right-radius: 4px;
border-bottom-left-radius: 4px;    cursor: pointer;
}

.upz{ cursor: pointer;
    
    background:#3AC162 url(/themes/skins/images/up.png) no-repeat;     

}
.searchdir input , .searchdir select {
background-color: #F6F7F8;
    border: 1px solid #F6F7F8;
    outline: none;
    border-radius: 2px;
    margin: 0;
}

.newt {
    width: auto ;
    padding-bottom: 0;
margin: 0;
}
.dirfield input, .dirfield select {
padding: 5px;
}
.namz{
padding: 0;
margin: 0 2px; 
}
.show-more{

    
}
.searchbut {
    height: 25px;
    padding: 0 10px ;
    position: relative;
    top: -12px;
}

.searchdir input:hover, .searchdir input:focus, .searchdir select:hover, .searchdir select:focus {
border: 1px solid #888;
}

.morebut {
    padding: 2px;
    width: auto;
    margin-top: 0;
    height: auto;
    margin-bottom: 10px;
    margin-right: 10px;
    font-size: 12px;
}
.moredisplay {
 display: none;
}

#footer-wrapper {
text-align: center;
}

#footer {
background: url("images/footer1.png") repeat-x scroll 0 0 #28739C;
color: #FFF;
margin: 0 auto;
padding: 0 20px 20px;
text-align: left;
 }

#footer-top {
color: #DDD;
font-weight: bold;
height: 20px;
letter-spacing: 1px;
line-height: 20px;
text-transform: uppercase;
}

#footer-mid {
padding: 20px 0 0;
}

#footer-bottom-wrapper {
background: url("images/footer-bottom.gif") repeat-x scroll 0 0 #19212E;
}

.floatleft {
display: inline-block;
}

.floatright {
display: inline-block;
float: right;
}

#footer-bottom {
color: #888;
height: 24px;
line-height: 24px;
margin: 0 auto;
padding: 13px 20px;
text-align: left;
}

#footer-social img {
margin: 0 2px;
width: 23px;
}

#footer-bottom-right a {
color: #fff !important;
}

.menu_visitor:hover {
color: #32CC40;
}
.notice{
	float: none;
	margin: 0 auto;
}

.notice > div {
margin: 0 auto;
display: table;
}

